[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/font/PixulBrush.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/background/teacher homepage bg.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons or icons/create quiz button.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons or icons/manage class button.png" type="Texture" id=5]
[ext_resource path="res://Teacher/TeacherHomePage.gd" type="Script" id=6]
[ext_resource path="res://sprites/buttons or icons/rounded rectangular popup.png" type="Texture" id=7]
[ext_resource path="res://sprites/buttons or icons/x button.png" type="Texture" id=8]
[ext_resource path="res://sprites/buttons or icons/create class button.png" type="Texture" id=9]
[ext_resource path="res://sprites/buttons or icons/view stats button.png" type="Texture" id=10]
[ext_resource path="res://sprites/buttons or icons/quit icon.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=2]
size = 108
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 1 )

[node name="TeacherHomePage" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateQuizButton" type="TextureButton" parent="."]
margin_left = 616.0
margin_top = 568.0
margin_right = 1216.0
margin_bottom = 744.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManageClassButton" type="TextureButton" parent="."]
margin_left = 616.0
margin_top = 784.0
margin_right = 1224.0
margin_bottom = 968.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameNameLabel" type="Label" parent="."]
margin_left = 536.0
margin_top = 136.0
margin_right = 1324.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "math4fun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoutButton" type="TextureButton" parent="."]
margin_left = 1808.0
margin_top = 16.0
margin_right = 1884.0
margin_bottom = 80.0
texture_normal = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoutLabel" type="Label" parent="."]
margin_left = 1792.0
margin_top = 88.0
margin_right = 1906.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "logout"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -488.0
margin_top = -188.0
margin_right = 472.0
margin_bottom = 459.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popup"]
margin_left = 280.0
margin_top = 79.5
margin_right = 707.0
margin_bottom = 148.5
custom_fonts/font = SubResource( 3 )
text = "Manage Class"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateClassButton" type="TextureButton" parent="Popup"]
margin_left = 208.0
margin_top = 223.5
margin_right = 744.0
margin_bottom = 383.5
texture_normal = ExtResource( 9 )
expand = true

[node name="ViewStatsButton" type="TextureButton" parent="Popup"]
margin_left = 208.0
margin_top = 409.0
margin_right = 752.0
margin_bottom = 562.0
texture_normal = ExtResource( 10 )
expand = true

[node name="CloseButton" type="TextureButton" parent="Popup"]
margin_left = 784.0
margin_top = 79.5
margin_right = 863.0
margin_bottom = 151.5
texture_normal = ExtResource( 8 )

[connection signal="pressed" from="CreateQuizButton" to="." method="_on_CreateQuizButton_pressed"]
[connection signal="pressed" from="ManageClassButton" to="." method="_on_ManageClassButton_pressed"]
[connection signal="pressed" from="LogoutButton" to="." method="_on_LogoutButton_pressed"]
[connection signal="pressed" from="Popup/CreateClassButton" to="." method="_on_CreateClassButton_pressed"]
[connection signal="pressed" from="Popup/ViewStatsButton" to="." method="_on_ViewStatsButton_pressed"]
[connection signal="pressed" from="Popup/CloseButton" to="." method="_on_CloseButton_pressed"]
